# aoc-2024-python

./: LICENSE  README.md  pyproject.toml
src/: Day01.ipynb  Day02.ipynb
