[project]
name = "aoc-2024-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.2",
    "ruff>=0.8.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipytest>=0.14.2",
    "pytest>=8.3.4",
    "uv>=0.5.5",
]
